Implement secure cookie handling with YAM_COOKIES_PATH env var
- Add cookies/ to .gitignore to prevent committing session tokens
- Update config.py to use YAM_COOKIES_PATH environment variable
- Modify cookie_scraper.py to create cookie directories dynamically
- Update GitHub Actions workflow to use temporary cookie storage
- Update README documentation for secure cookie handling

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,10 @@ node_modules/
 # Data files (optional, uncomment if you don't want to track these)
 # app/data/cookies.json
 
+# Cookie files (security: never commit session cookies)
+cookies/
+*.cookies.json
+
 # Logs
 *.log
 app/data/swell_forecast.json
