--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -30,6 +30,7 @@ jobs:
           YAM_USERNAME: ${{ secrets.YAM_USERNAME }}
           YAM_PASSWORD: ${{ secrets.YAM_PASSWORD }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+          YAM_COOKIES_PATH: ${{ runner.temp }}/yam_cookies.json
         run: python -m app.main monitor 14 --once
 
       - name: Commit and push if changes
